--- a/config/default.yaml
+++ b/config/default.yaml
@@ -13,15 +13,10 @@ train:
     initial: 0.001
     final: 0.05
   frame_num: 128
-  fs: 16
-  SNR:
-    - 0
-    - -5
-    - -10
+
   summary_interval: 10
   validation_interval: 100
   checkpoint_interval: 1000
-  type: 'R' # R,C
 ---
 loss:
   type: 'wSDR'
@@ -38,28 +33,12 @@ scheduler: # Plateau, oneCycle, None
 ---
 data:
   test_train_ratio: 0.2
-  root: '/home/nas/user/kbh/'
-  wav : '/home/nas/user/kbh/'
-  pkl : '/home/nas/user/kbh/'
+  root: '/home/data/kbh/3-channel-dnn/'
 ---
   log:
-    root: '/home/nas/user/kbh//'
+    root: '/home/data/kbh/'
     chkpt_dir: 'chkpt'
     log_dir  : 'logs'
 ---
-form:
-  input: '*-norm.wav'
-  target:
-    wav: '*-target.wav'
-    mag: '*-target.pt'
-  mixed:
-    wav: '*-mixed.wav'
-    mag: '*-mixed.pt'
----
 model:
 ---
-audio:
-  n_fft: 1200
-  num_freq: 601 # n_fft//2 + 1
-  sample_rate: 16000
-
