--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,7 +1,10 @@
 gpu: 'cuda:0'
 ---
-eval:
-  type: 'cplx'  # cplx, mag
+model :
+  FC :
+    len : 3
+  DCUNET : 
+    frame_num : 41
 ---
 train:
   epoch: 50
@@ -12,7 +15,7 @@ train:
   adabound:
     initial: 0.001
     final: 0.05
-  frame_num: 128
+  frame_num: 1024
 
   summary_interval: 10
   validation_interval: 100
@@ -31,14 +34,13 @@ scheduler: # Plateau, oneCycle, None
     factor: 0.5
     min_lr: 0.000005
 ---
+audio:
+  frame : 1024
+  shift : 256
+  samplerate : 16000
+---
 data:
-  test_train_ratio: 0.2
   root: '/home/data/kbh/3-channel-dnn/'
 ---
   log:
-    root: '/home/data/kbh/'
-    chkpt_dir: 'chkpt'
-    log_dir  : 'logs'
----
-model:
----
+    root: '/home/nas/user/kbh/3-channel-dnn/'
