--- a/config/FC_t4.yaml
+++ b/config/FC_t4.yaml
@@ -1,15 +1,17 @@
-gpu: 'cuda:0'
+gpu: 'cuda:1'
 ---
 model :
   FC :
-    block : 3
+    version: 4
+    block: 3
+    dropout : 0.5
   DCUNET : 
     num_frame : 80
 ---
 train:
-  epoch: 50
+  epoch: 500
   # 12
-  batch_size: 12
+  batch_size: 64
   # 16
   num_workers: 8
   optimizer: 'adam'
@@ -42,7 +44,7 @@ audio:
   samplerate : 16000
 ---
 data:
-#  root: '/home/data/3-channel-dnn/'
+  #root: '/home/data/3-channel-dnn/'
   root: '/home/kiosk/data/3-channel-dnn/'
 ---
   log:
