--- a/config/default.yaml
+++ b/config/default.yaml
@@ -4,7 +4,10 @@ model :
   FC :
     block : 3
   DCUNET : 
+    # num_frame must be multiple of 16
     num_frame : 80
+    # input : 'noisy', 'estim'
+    input : 'noisy'
 ---
 train:
   epoch: 50
