magnitude only inference

--- a/config/DCUNET_t1.yaml
+++ b/config/DCUNET_t1.yaml
@@ -4,6 +4,8 @@ model :
   FC :
     block : 3
   DCUNET : 
+    # input : 'noisy', 'estim'
+    input : 'noisy'
     num_frame : 80
 ---
 train:
@@ -42,7 +44,7 @@ audio:
   samplerate : 16000
 ---
 data:
-  root: '/home/data/3-channel-dnn/'
+  root: '/home/data/kbh/3-channel-dnn/'
 ---
   log:
     root: '/home/nas/user/kbh/3-channel-dnn/'
