--- a/config/DCUNET_t2.yaml
+++ b/config/DCUNET_t2.yaml
@@ -3,6 +3,9 @@ model :
     block : 3
   DCUNET : 
     num_frame : 80
+    input : 'noisy'
+    post_filter : false
+    version : 1
 ---
 train:
   epoch: 50
