--- a/config/DCUNET_t7.yaml
+++ b/config/DCUNET_t7.yaml
@@ -1,18 +1,18 @@
 model :
-  FC :
-    block : 3
   DCUNET : 
     # num_frame must be multiple of 16
-    num_frame : 48
+    num_frame : 160
     # input : 'noisy', 'estim'
     input : 'noisy'
-    post_filter : false
-    version : 1
+    post_filter: false
+    # channels : 2, 3
+    channels : 2
+    version : 2
 ---
 train:
   epoch: 200
   # 12
-  batch_size: 20
+  batch_size: 12
   # 16
   num_workers: 16
   optimizer: 'adam'
