--- a/config/DCCRN_t1.yaml
+++ b/config/DCCRN_t1.yaml
@@ -8,6 +8,9 @@ model :
     # channels : 2, 3
     channels : 3
     version : 1
+  DCCRN : 
+    mask : 'E' #R,C,E
+    num_frame : 6 # look-ahead
 ---
 train:
   epoch: 50
@@ -26,7 +29,7 @@ train:
   checkpoint_interval: 1000
 ---
 loss:
-  type: 'mSDR' # SDR, mSDR, iSDR
+  type: 'iSDR' # SDR, mSDR
   wSDR:
     alpha: 0.99
 ---
@@ -46,7 +49,6 @@ audio:
   samplerate : 16000
 ---
 data:
-  SNR :  ['SNR-7','SNR-5','SNR0','SNR5','SNR7','SNR10']
   root: '/home/data/kbh/MCSE/CGMM_RLS_MPDR/'
   test_root: '/home/data/kbh/3-channel-dnn/'
 ---
