--- a/config/UNET/UNET_t0.yaml
+++ b/config/UNET/UNET_t0.yaml
@@ -8,6 +8,7 @@ model :
     channels : 1
     version : 1
     dropout : 0.0
+    activation : 'Sigmoid' # Sigmoid, LeakyReLU, none
   DCUNET : 
     # num_frame must be multiple of 16
     num_frame : 80
@@ -23,7 +24,7 @@ model :
 train:
   epoch: 30
   # 12
-  batch_size: 48
+  batch_size: 80
   # 16
   num_workers: 8
   frame_num: 1024
