--- a/config/UNET/UNET_t5.yaml
+++ b/config/UNET/UNET_t5.yaml
@@ -4,7 +4,7 @@ model :
     # num_frame must be multiple of 16
     num_frame : 80
     # input : 'noisy', 'estim'
-    input : 'estim'
+    input : 'noisy'
     channels : 1
     version : 1
     dropout : 0.0
@@ -46,7 +46,7 @@ optimizer :
     amsgrad : true
 ---
 loss:
-  type: 'mSDR' # SDR, mSDR, mwMSE, mwMSE_iSDR
+  type: 'mwMSE' # SDR, mSDR, mwMSE, mwMSE_iSDR
   iSDR:
   wSDR:
     alpha: 0.99
