--- a/config/UNET/UNET_t1.yaml
+++ b/config/UNET/UNET_t1.yaml
@@ -8,7 +8,8 @@ model :
     channels : 1
     version : 1
     dropout : 0.0
-    activation : 'Sigmoid' # Sigmoid, LeakyReLU, none
+    activation : 'LeakyReLU' # LeakyReLU, SiLU
+    mask_activation : 'Sigmoid' # Sigmoid, LeakyReLU, none
   DCUNET : 
     # num_frame must be multiple of 16
     num_frame : 80
@@ -20,6 +21,10 @@ model :
     version : 1
     dropout : 0.2
     complex: true
+---
+augment:
+  type : 'spec'
+  spec:
 ---
 train:
   epoch: 30
