--- a/config/UNET/UNET_t23.yaml
+++ b/config/UNET/UNET_t23.yaml
@@ -4,22 +4,21 @@ model :
     # num_frame must be multiple of 16
     num_frame : 80
     # input : 'noisy', 'estim'
-    input : 'noisy'
+    input : 'estim'
     method : 'masking' # masking, mapping
-    channels : 1
+    channels : 3
     version : 1
-    dropout : 0.0 # 
-    activation : 'LeakyReLU' # LeakyReLU, SiLU, Softplus, PReLU
-    mask_activation : 'Sigmoid' # Sigmoid, ReLU, Softplus,none
+    dropout : 0.2
+    activation : 'PReLU' # SiLU, LeakyReLU, PReLU,none
+    mask_activation : 'Softplus' # Sigmoid, Softplus,ReLU, none
 ---
 augment:
-  type : 'spec'
-  spec:
+  type: 'none'
 ---
 train:
-  epoch: 10
+  epoch: 30
   # 12
-  batch_size: 12
+  batch_size: 40
   # 16
   num_workers: 8
   frame_num: 1024
@@ -41,7 +40,7 @@ optimizer :
     amsgrad : true
 ---
 loss:
-  type: 'mSDR' # SDR, mSDR, mwMSE, mwMSE_iSDR
+  type: 'mwMSE' # SDR, mSDR, mwMSE, mwMSE_iSDR
   iSDR:
   wSDR:
     alpha: 0.99
@@ -49,12 +48,12 @@ loss:
     alpha : 1.0
   mwMSE :
     alpha: 0.9
-    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
     scale:  'log+1' # log,log+1,dB,none
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
-scheduler: # Plateau, oneCycle, CyclicLR, None
+scheduler: # Plateau, oneCycle, None
   type: 'Plateau'
   oneCycle:
     max_lr: 0.01
