--- a/config/UNET/UNET_t5.yaml
+++ b/config/UNET/UNET_t5.yaml
@@ -5,21 +5,14 @@ model :
     num_frame : 80
     # input : 'noisy', 'estim'
     input : 'noisy'
-    channels : 1
-    version : 1
-    dropout : 0.0
-    activation : 'Sigmoid' # Sigmoid, LeakyReLU, none
-  DCUNET : 
-    # num_frame must be multiple of 16
-    num_frame : 80
-    # input : 'noisy', 'estim'
-    input : 'noisy'
-    post_filter: false
-    # channels : 2, 3
     channels : 3
     version : 1
-    dropout : 0.2
-    complex: true
+    dropout : 0.0
+    activation : 'LeakyReLU' # LeakyReLU, SiLU
+    mask_activation : 'Sigmoid' # Sigmoid, ReLU, none
+---
+augment:
+  type: 'none'
 ---
 train:
   epoch: 30
@@ -54,8 +47,8 @@ loss:
     alpha : 1.0
   mwMSE :
     alpha: 0.9
+    scale:  'log+1' # log,log+1,dB,none
     norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
-    dB   : false
   mwMSE_iSDR:
     beta : 0.5
 ---
