--- a/config/UNET/UNET_t31.yaml
+++ b/config/UNET/UNET_t31.yaml
@@ -40,16 +40,18 @@ optimizer :
     amsgrad : true
 ---
 loss:
-  type: 'mwMSE' # SDR, mSDR, mwMSE, mwMSE_iSDR
+  type: 'wMSE' # SDR, mSDR, mwMSE, mwMSE_iSDR
   iSDR:
   wSDR:
     alpha: 0.99
   wMSE :
-    alpha : 1.0
+    alpha : 0.9
+    scale:  'log+1' # log+1, log, dB, none
+    norm : 'norm_max_batch' # none, norm_max_batch
   mwMSE :
     alpha: 0.9
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
