--- a/config/UNET/UNET_t37.yaml
+++ b/config/UNET/UNET_t37.yaml
@@ -6,10 +6,10 @@ model :
     # input : 'noisy', 'estim'
     input : 'estim'
     method : 'masking' # masking, mapping
-    channels : 3
+    channels : 1
     version : 1
     dropout : 0.2
-    activation : 'LeakyReLU' # SiLU, LeakyReLU, none
+    activation : 'PReLU' # SiLU, LeakyReLU, none
     mask_activation : 'Softplus' # Sigmoid, Softplus,ReLU, none
 ---
 augment:
@@ -43,13 +43,13 @@ loss:
   type: 'mwMSE' # SDR, mSDR, mwMSE, mwMSE_iSDR
   iSDR:
   wSDR:
-    alpha: 0.99
+    alpha: 0.999
   wMSE :
     alpha : 1.0
   mwMSE :
-    alpha: 0.9
+    alpha: 0.99
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
