--- a/config/UNET/UNET_t26.yaml
+++ b/config/UNET/UNET_t26.yaml
@@ -49,12 +49,12 @@ loss:
   mwMSE :
     alpha: 0.9
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
 scheduler: # Plateau, oneCycle, None
-  type: 'Plateau'
+  type: 'oneCycle'
   oneCycle:
     max_lr: 0.01
   Plateau:
