--- a/config/UNET/UNET_t27.yaml
+++ b/config/UNET/UNET_t27.yaml
@@ -4,7 +4,7 @@ model :
     # num_frame must be multiple of 16
     num_frame : 80
     # input : 'noisy', 'estim'
-    input : 'estim'
+    input : 'noisy'
     method : 'masking' # masking, mapping
     channels : 3
     version : 1
@@ -49,7 +49,7 @@ loss:
   mwMSE :
     alpha: 0.9
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
