--- a/config/UNET/UNET_t28.yaml
+++ b/config/UNET/UNET_t28.yaml
@@ -47,9 +47,9 @@ loss:
   wMSE :
     alpha : 1.0
   mwMSE :
-    alpha: 0.9
+    alpha: 0.99
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
