--- a/config/UNET/UNET_t33.yaml
+++ b/config/UNET/UNET_t33.yaml
@@ -9,7 +9,7 @@ model :
     channels : 3
     version : 1
     dropout : 0.2
-    activation : 'LeakyReLU' # SiLU, LeakyReLU, none
+    activation : 'PReLU' # LeakyReLU, SiLU, Softplus, PReLU, ReLU
     mask_activation : 'Softplus' # Sigmoid, Softplus,ReLU, none
 ---
 augment:
@@ -47,9 +47,9 @@ loss:
   wMSE :
     alpha : 1.0
   mwMSE :
-    alpha: 0.9
+    alpha: 0.99
     scale:  'log+1' # log,log+1,dB,none
-    norm : 'norm_max_freq' # none, norm_max_batch, norm_max_freq
+    norm : 'norm_max_batch' # none, norm_max_batch, norm_max_freq
   mwMSE_iSDR:
     beta : 0.5
 ---
